instances.tf
resource "tls_private_key" "ec2_key" {
  algorithm = "RSA"
  rsa_bits  = 2048
}

resource "aws_key_pair" "ec2_key_pair" {
  key_name   = "${var.projeto}-${var.candidato}-key"
  public_key = tls_private_key.ec2_key.public_key_openssh
}

data "aws_ami" "debian12" {
  most_recent = true

  filter {
    name   = "name"
    values = ["debian-12-amd64-*"]
  }

  filter {
    name   = "virtualization-type"
    values = ["hvm"]
  }

  owners = ["679593333241"]
}

resource "aws_instance" "debian_ec2" {
  count           = var.instance_count
  ami             = data.aws_ami.debian12.id
  instance_type   = "t2.micro"
  subnet_id       = aws_subnet.main_subnet.id
  key_name        = aws_key_pair.ec2_key_pair.key_name
  security_groups = [aws_security_group.main_sg.name]

  associate_public_ip_address = true

  root_block_device {
    volume_size           = 20
    volume_type           = "gp2"
    delete_on_termination = true
  }

  user_data = <<-EOF
              #!/bin/bash
              apt-get update -y
              apt-get upgrade -y
              
              apt-get install nginx -y
              systemctl start nginx
              systemctl enable nginx

              sed -i 's/^PermitRootLogin .*/PermitRootLogin no/' /etc/ssh/sshd_config
              systemctl restart sshd
              
              apt-get install -y ufw
              
              ufw allow 22/tcp
              ufw allow 80/tcp
              ufw allow 443/tcp
              
              ufw --force enable
              EOF

  tags = {
    Name = "${var.projeto}-${var.candidato}-ec2-${count.index}"
  }
}
